# balancing-robot-v2

main/: BalancingController.cpp  CMakeLists.txt  ComponentHandler.cpp  Encoder.cpp  MPU6050Manager.cpp  MotorDriver.cpp  PCNTEncoder.cpp  PIDController.cpp  RuntimeConfig.cpp  WebServer.cpp  main.cpp  main1.cpp  mpu6050.cpp
main/algorithms/: BalanceMonitor.cpp  BalancingAlgorithm.cpp  CommandProcessor.cpp  FallDetector.cpp  NestedPidBalanceStrategy.cpp  OrientationEstimator.cpp  PIDController.cpp
main/algorithms/include/: BalanceControlTypes.hpp  BalanceMonitor.hpp  BalancingAlgorithm.hpp  CommandProcessor.hpp  FallDetector.hpp  IBalanceControlStrategy.hpp  NestedPidBalanceStrategy.hpp  OrientationEstimator.hpp  PIDController.hpp
main/config/: ConfigurationService.cpp  JsonConfigParser.cpp  SPIFFSStorageService.cpp
main/config/include/: ConfigData.hpp  ConfigurationService.hpp  JsonConfigParser.hpp
main/core/: Application.cpp  ApplicationContext.cpp  ApplicationEventWiring.cpp  ApplicationRuntime.cpp  ComponentHandler.cpp  ControlEventDispatcher.cpp  ControlModeExecutor.cpp  EventBus.cpp  RobotController.cpp  StateManager.cpp  StateManagerPolicy.cpp
main/core/events/: BALANCE_AutoBalanceReady.hpp  BALANCE_FallDetected.hpp  BALANCE_MonitorModeChanged.hpp  BALANCE_RecoveryDetected.hpp  BATTERY_StatusUpdate.hpp  COMMAND_InputModeChanged.hpp  CONFIG_BatteryConfigUpdate.hpp  CONFIG_BehaviorConfigUpdate.hpp  CONFIG_ControlConfigUpdate.hpp  CONFIG_EncoderConfigUpdate.hpp  CONFIG_FullConfigUpdate.hpp  CONFIG_ImuConfigUpdate.hpp  CONFIG_MotorConfigUpdate.hpp  CONFIG_PidConfigUpdate.hpp  CONFIG_WiFiConfigUpdate.hpp  CONTROL_RunModeChanged.hpp  GUIDED_CalibrationFinished.hpp  GUIDED_CalibrationRunModeChanged.hpp  IMU_AttachRequested.hpp  IMU_AttemptRecovery.hpp  IMU_AvailabilityChanged.hpp  IMU_CalibrationCompleted.hpp  IMU_CalibrationRequest.hpp  IMU_CalibrationRequestRejected.hpp  IMU_CalibrationStarted.hpp  IMU_CommunicationError.hpp  IMU_GyroOffsetsUpdated.hpp  IMU_OrientationData.hpp  IMU_RecoveryFailed.hpp  IMU_RecoverySucceeded.hpp  IMU_StateChanged.hpp  IMU_StateTransitionRequest.hpp  IMU_SystemPolicyChanged.hpp  MOTION_FallDetected.hpp  MOTION_TargetMovement.hpp  MOTION_UsingFallbackValues.hpp  MOTOR_OutputEnabledChanged.hpp  OTA_UpdatePolicyChanged.hpp  PID_TuningFinished.hpp  PID_TuningRunModeChanged.hpp  (+18 more)
main/core/include/: Application.hpp  ApplicationContext.hpp  ApplicationEventWiring.hpp  ApplicationRuntime.hpp  BaseEvent.hpp  ComponentHandler.hpp  ControlEventDispatcher.hpp  ControlModeExecutor.hpp  EventBus.hpp  EventHandler.hpp  EventTypes.hpp  PidTuningTypes.hpp  RobotController.hpp  StateManager.hpp  StateManagerPolicy.hpp  SystemState.hpp  Task.hpp
main/drivers/: MX1616H_HWDriver.cpp  mpu6050.cpp
main/drivers/include/: MX1616H_HWDriver.hpp  mpu6050.hpp
main/events/: BaseEvent.hpp  BatteryStatusUpdatedEvent.hpp  CalibrateCommandEvent.hpp  CalibrationCompleteEvent.hpp  CalibrationStartedEvent.hpp  ConfigUpdatedEvent.hpp  DisableFallDetectCommandEvent.hpp  DisableRecoveryCommandEvent.hpp  EnableFallDetectCommandEvent.hpp  EnableRecoveryCommandEvent.hpp  EventTypes.hpp  FallDetectionEvent.hpp  GyroOffsetsUpdatedEvent.hpp  IMU_CommunicationErrorEvent.hpp  ImuRecoveryEvents.hpp  JoystickInputEvent.hpp  OrientationDataEvent.hpp  StartBalancingCommand.hpp  StartCalibrationRequestEvent.hpp  StopCommand.hpp  SystemStateChangedEvent.hpp  TargetMovementCommand.hpp  TelemetrySnapshotEvent.hpp
main/include/: BalancingController.hpp  ComponentHandler.hpp  Encoder.hpp  MPU6050Manager.hpp  MotorDriver.hpp  PIDController.hpp  RuntimeConfig.hpp  WebServer.hpp  mpu6050.hpp
main/interfaces/: IEncoder.hpp  IMPU6050Manager.hpp  IPIDController.hpp  IRuntimeConfig.hpp  IWebServer.hpp
main/services/: BatteryService.cpp  EncoderService.cpp  GuidedCalibrationService.cpp  IMUCalibrationService.cpp  IMUHealthMonitor.cpp  IMUService.cpp  LogBufferService.cpp  MotorService.cpp  OTAService.cpp  PidTuningAnalysis.cpp  PidTuningService.cpp  WiFiManager.cpp
main/services/battery_service/: BatteryService.cpp  BatteryTask.cpp
main/services/battery_service/include/: BatteryService.hpp  BatteryTask.hpp
main/services/configuration_service/: ConfigChangePublisher.cpp  ConfigValidator.cpp  ConfigurationService.cpp  JsonConfigParser.cpp  JsonConfigSectionCodecs.cpp
main/services/configuration_service/include/: ConfigChangePublisher.hpp  ConfigData.hpp  ConfigValidator.hpp  ConfigurationService.hpp  JsonConfigParser.hpp  JsonConfigSectionCodecs.hpp  SPIFFSStorageService.hpp
main/services/imu_service/: FIFOProcessor.cpp  FIFOTask.cpp  HealthMonitorTask.cpp  I2CDevice.cpp  I2CHealthTracker.cpp  IMUCalibration.cpp  IMUCalibrationService.cpp  IMUDataReadyInterrupt.cpp  IMUHealthMonitor.cpp  IMUService.cpp  IMUTasks.cpp  MPU6050HardwareController.cpp  OrientationEstimator.cpp  mpu6050.cpp
main/services/imu_service/include/: FIFOProcessor.hpp  FIFOTask.hpp  HealthMonitorTask.hpp  I2CDevice.hpp  I2CHealthTracker.hpp  IIMUDataSink.hpp  IIMUFaultSink.hpp  IMUCalibration.hpp  IMUCalibrationService.hpp  IMUDataReadyInterrupt.hpp  IMUHealthMonitor.hpp  IMUScale.hpp  IMUService.hpp  IMUState.hpp  (+5 more)
main/services/include/: BatteryService.hpp  EncoderService.hpp  GuidedCalibrationService.hpp  IMUCalibrationService.hpp  IMUHealthMonitor.hpp  IMUService.hpp  LogBufferService.hpp  MotorService.hpp  OTAService.hpp  PidTuningAnalysis.hpp  PidTuningService.hpp  WiFiManager.hpp
main/state/: StateManager.cpp
main/state/include/: StateManager.hpp  SystemState.hpp
main/tasks/: BatteryTask.cpp  ControlTask.cpp  IMUTasks.cpp
main/tasks/include/: BatteryTask.hpp  ControlTask.hpp  IMUTasks.hpp
main/web/: CommandApiHandler.cpp  ConfigApiHandler.cpp  LogsApiHandler.cpp  OTAApiHandler.cpp  StateApiHandler.cpp  StaticFileHandler.cpp  TelemetryHandler.cpp  WebServer.cpp
main/web/include/: CommandApiHandler.hpp  ConfigApiHandler.hpp  HttpResponseUtils.hpp  LogsApiHandler.hpp  OTAApiHandler.hpp  StateApiHandler.hpp  StaticFileHandler.hpp  TelemetryDataPoint.hpp  TelemetryHandler.hpp  WebServer.hpp
(+31 files in other folders)
