# main/CMakeLists.txt

idf_component_register(SRCS "tasks/ControlTask.cpp"
                            "tasks/BatteryTask.cpp"
                            "tasks/IMUTasks.cpp"
                            "core/ComponentHandler.cpp"
                            "config/SPIFFSStorageService.cpp"
                            "config/JsonConfigParser.cpp"
                            "config/ConfigurationService.cpp"
                            "state/StateManager.cpp"
                            "core/EventBus.cpp"
                            "core/Application.cpp"
                            "services/WiFiManager.cpp"
                            "web/WebServer.cpp"
                            "web/StaticFileHandler.cpp" 
                            "web/TelemetryHandler.cpp" 
                            "web/ConfigApiHandler.cpp"  
                            "web/CommandApiHandler.cpp" 
                            "web/StateApiHandler.cpp"   
                            # --- End Web Handlers ---
                            "algorithms/PIDController.cpp"
                            "drivers/mpu6050.cpp"
                            "services/IMUService.cpp"
                            "algorithms/OrientationEstimator.cpp"
                            "services/EncoderService.cpp"
                            "drivers/MX1616H_HWDriver.cpp"
                            "services/MotorService.cpp"
                            "algorithms/BalancingAlgorithm.cpp"
                            "services/BatteryService.cpp"
                            "algorithms/FallDetector.cpp"
                            "algorithms/CommandProcessor.cpp"
                            "core/RobotController.cpp" # Facade
                            "main.cpp"
                       INCLUDE_DIRS "."
                                    "tasks/include"
                                    "algorithms/include"
                                    "config/include"
                                    "core/include"
                                    "drivers/include"
                                    "events"
                                    "services/include"
                                    "state/include"
                                    "web/include"
                       REQUIRES esp_wifi esp_event esp_netif esp_http_server nvs_flash
                                esp_timer spiffs driver json pthread esp_adc
                       PRIV_REQUIRES json
                      )